--- a/smartmeter_cfg_vorlage.toml
+++ b/smartmeter_cfg_vorlage.toml
@@ -40,7 +40,7 @@ token = "<telegrambot_token>"  # Token oder false, false ohne " " schreiben
 
 [mess_cfg]
 # Auswahl des verwendeten Models
-# Verfügbar: DDS353B, SDM230, SDM530
+# Verfügbar: DDS353B, SDM230, SDM530, SDM630
 device = "<modelname>"
 messintervall = 10  # in Sekunden
 schnelles_messintervall = 1  # in Sekunden
