--- a/smartmeter_cfg_vorlage.toml
+++ b/smartmeter_cfg_vorlage.toml
@@ -34,6 +34,12 @@ db = "<db_adapter>"  # "postgresql" | "mysql" | "sqlite" | "postgrest"
     token = "<token>"
     table = "<table>"
 
+[mqtt]
+broker = "<mqttBroker>"
+port = "<mqtt Port>"
+username = "<username>" #empty disables authentication
+password = "<password>" #empty disables authentication
+topic = "<topic>" #empty defaults to /smartmeter/
 
 [telegram_bot]
 token = "<telegrambot_token>"  # Token oder false, false ohne " " schreiben
