--- a/smartmeter_cfg_vorlage.toml
+++ b/smartmeter_cfg_vorlage.toml
@@ -37,9 +37,10 @@ db = "<db_adapter>"  # "postgresql" | "mysql" | "sqlite" | "postgrest"
 [mqtt]
 broker = "<mqttBroker>"
 port = "<mqtt Port>"
-username = "<username>" #empty disables authentication
-password = "<password>" #empty disables authentication
-topic = "<topic>" #empty defaults to /smartmeter/
+username = "<username>" # empty disables authentication
+password = "<password>" # empty disables authentication
+topic = "<topic>" # empty defaults to /smartmeter/
+is_active = false # aktiv wenn true, inaktiv wenn false
 
 [telegram_bot]
 token = "<telegrambot_token>"  # Token oder false, false ohne " " schreiben
