--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-minimalmodbus
-peewee
-pyserial
-requests
-toml
-systemd-python
-paho-mqtt
+minimalmodbus~=2.0.1
+peewee~=3.13.1
+pyserial~=3.4
+requests~=2.31.0
+toml~=0.10.2
+systemd-python~=234
+paho-mqtt~=1.6.1
